--- a/css/dsgn.css
+++ b/css/dsgn.css
@@ -87,7 +87,7 @@ h1 {
     width: 100%;
     height: 100vh;
     background-image: url("../imgs/IMG_0040.jpg");
-    background-position: center center;
+    background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
