--- a/css/dsgn.css
+++ b/css/dsgn.css
@@ -85,7 +85,7 @@ h1 {
 
 .slider {
     width: 100%;
-    height: 100vh;
+    height: auto;
     background-image: url("../imgs/IMG_0040.jpg");
     background-position: center;
     background-size: cover;
